--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 	<modules>
 		<module>jvm-thread-tool-utils</module>
 		<module>jvm-thread-tool-server</module>
+        <module>sparkui-threaddump-parser</module>
+		<!--
+		<module>jvm-thread-tool-hotspot</module>
+		-->
 	</modules>
 	
 	<dependencyManagement>
@@ -24,7 +28,7 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 	            <artifactId>spring-boot-dependencies</artifactId>
-	            <version>2.4.2</version>
+	            <version>2.7.2</version>
 	            <type>pom</type>
 	            <scope>import</scope>
 			</dependency>
@@ -32,7 +36,7 @@
 			<dependency>
 	            <groupId>org.projectlombok</groupId>
 	            <artifactId>lombok</artifactId>
-	            <version>1.18.12</version>
+	            <version>1.18.28</version>
 	            <scope>provided</scope>
 	        </dependency>
 			
